[project]
name = "bunsalyze"
version = "0.1.0"
description = "Rigorously counts protein-ligand hydrogen bonds using distance and angle information in a predicted or ground-truth 3D structure (PDB file)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "freesasa>=2.2.1",
    "networkx>=3.5",
    "numpy>=2.3.1",
    "prody>=2.6.1",
    "rdkit>=2025.03.5",
    "scipy>=1.16.0",
    "torch>=2.4.0",
]


# makes the project run-able as a cli tool, e.g "bunsalyze ..."
[project.scripts]
bunsalyze = "bunsalyze.__main__:cli"

# Excludes the data directory when building the package.
[tool.setuptools.packages.find]
exclude = ["example_pdbs*"]

