[project]
name = "bunsalyze"
version = "0.3.1"
description = "Rigorously counts protein-ligand hydrogen bonds using distance and angle information in a predicted or ground-truth 3D structure (PDB file)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "prody",
    "scipy",
    "networkx",
    "freesasa>=2.2.1",
    "rdkit>=2025.03.5",
    "torch>=2.4.0",
]


# makes the project run-able as a cli tool, e.g "bunsalyze ..."
[project.scripts]
bunsalyze = "bunsalyze.__main__:cli"

# Excludes the data directory when building the package.
[tool.setuptools.packages.find]
exclude = ["example_pdbs*"]

